--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
       </h2>
       
       <div class="testimonial-grid">
-        <div class="testimonial-card">
+        <!-- First Testimonial Card with Hapro Background -->
+        <div class="testimonial-card" style="background: linear-gradient(90deg, rgba(10, 5, 30, 1) 0%, rgba(30, 15, 60, 0.6) 100%), url('public/hapro-bg.jpg') center/cover no-repeat;">
           <div class="testimonial-image">
             <div class="image-placeholder">1</div>
           </div>
@@ -133,9 +134,9 @@
           </div>
         </div>
         
-        <div class="testimonial-card">
+        <div class="testimonial-card" style="background: linear-gradient(90deg, rgba(10, 5, 30, 1) 0%, rgba(30, 15, 60, 0.6) 100%), url('public/ovun-bg.png') center/cover no-repeat;">
           <div class="testimonial-image">
-            <div class="image-placeholder">2</div>
+            <div class="image-placeholder">1</div>
           </div>
           <div class="testimonial-content">
             <blockquote>
