--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <!-- First Testimonial Card with Hapro Background -->
         <div class="testimonial-card" style="background: linear-gradient(90deg, rgba(10, 5, 30, 1) 0%, rgba(30, 15, 60, 0.6) 100%), url('public/hapro-bg.jpg') center/cover no-repeat;">
           <div class="testimonial-image">
-            <div class="image-placeholder">1</div>
+            <div class="image-placeholder">Inge</div>
           </div>
           <div class="testimonial-content">
             <blockquote>
@@ -134,9 +134,9 @@
           </div>
         </div>
         
-        <div class="testimonial-card" style="background: linear-gradient(90deg, rgba(10, 5, 30, 1) 0%, rgba(30, 15, 60, 0.6) 100%), url('public/ovun-bg.png') center/cover no-repeat;">
+        <div class="testimonial-card" style="background: linear-gradient(90deg, rgba(10, 5, 30, 1) 0%, rgba(30, 15, 60, 0.6) 100%), url('public/ovun-bg.jpg') center/cover no-repeat;">
           <div class="testimonial-image">
-            <div class="image-placeholder">1</div>
+            <div class="image-placeholder">Pål</div>
           </div>
           <div class="testimonial-content">
             <blockquote>
