--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <li>+1 CTO</li>
             <li>+1 Full Stack</li>
             <li>+2 Sales + 1 After Sales</li>
-            <li>Total force: 7</li>
+            <li>Total force: 8</li>
           </ul>
         </div>
         
@@ -307,7 +307,7 @@
           <h3>GLOBAL CONQUEST</h3>
           <ul>
             <li>Target SAM: $2.4B+</li>
-            <li>Dual-front assault: USA + Europe</li>
+            <li>Dual-front: USA + Europe</li>
             <li>Marketing blitz for inbound leads</li>
             <li>Localized strike teams</li>
           </ul>
